# pkg2

./: .coveragerc  .gitmodules  .isort.cfg  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
docs/: conf.py  index.md
src/kw_haw_pkg2/: __init__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
